feat: various improvements